Fix screen width on mobile devices

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -50,6 +50,10 @@ button {
   text-decoration: none;
 }
 
+.logo_title:hover {
+  color: #db0000;
+}
+
 .version_number {
   display: flex;
   align-items: flex-end;
@@ -293,6 +297,8 @@ h1 {
 
 h2 {
   font-size: min(10vw, 56px);
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .hero {
@@ -303,7 +309,7 @@ h2 {
   text-align: center;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 900px) {
   .hero {
     height: 100vh;
   }
@@ -313,7 +319,12 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px;
+  max-width: 100vw;
+}
+
+.hero_centered a{
+  padding: 50px;
+  padding-bottom: 100px;
 }
 
 .hero_centered button {
@@ -337,7 +348,7 @@ h2 {
 }
 
 h3 {
-  font-size: 48px;
+  font-size: min(7vw, 48px);
   font-weight: 400;
   color: #9C1717;
   width: 70%;
@@ -379,7 +390,7 @@ h5 {
 }
 
 @keyframes pulse {
-  0% { box-shadow: 0 0 0 0 #9C1717; }
+  0% { box-shadow: 0 0 0 0 #b41919; }
 }
 
 @media screen and (max-width: 600px) { 
@@ -487,4 +498,11 @@ h5 {
     max-width: 70%;
   }
 
+}
+
+/* Footer */
+
+.footer {
+  display: flex;
+  background-color: #9C1717;
 }
